--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>My First GitHub Repo</title>
 </head>
 <body>
+    <h1>I Can push to github</h1>
+    <h1>mama I can github</h1>
     
 </body>
 </html>
