--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First GitHub Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>I Can push to github</h1>
     <h1>mama I can github</h1>
-    
+
 </body>
 </html>
