--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>I Can push to github</h1>
-    <h1>mama I can github</h1>
+    <h1>mama I can github code</h1>
+    <img src="Rajiya.jpg" alt="">
 
 </body>
 </html>
